--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@upscalerjs/esrgan-slim": "^1.0.0-beta.12",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "upscaler": "^1.0.0-beta.19"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -24,7 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
     "vite": "^5.3.0",
-    "vite-plugin-wasm": "^3.3.0",
-    "vite-plugin-top-level-await": "^1.4.4"
+    "vite-plugin-top-level-await": "^1.4.4",
+    "vite-plugin-wasm": "^3.3.0"
   }
 }
