--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,6 +1,13 @@
 # Core dependencies
 numpy>=1.20
 Pillow>=9.0
+cffi>=1.15.0
+pymupdf>=1.23.0
+pdf2docx>=0.5.6
+python-docx>=1.1.0
+python-pptx>=0.6.23
+Pillow>=10.0.0
+pytest>=7.0.0
 
 # Optional: PyTorch
 # torch>=2.0
