--- a/web/package.json
+++ b/web/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@upscalerjs/esrgan-slim": "^1.0.0-beta.12",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.10.1",
+    "tailwindcss": "^4.1.18",
     "upscaler": "^1.0.0-beta.19"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
